update of members

--- a/source/judotech.web.club/source/pug/pages/profile.pug
+++ b/source/judotech.web.club/source/pug/pages/profile.pug
@@ -6,15 +6,37 @@ block content
             input#email(type="hidden")
             label Namn
                 input#fullname(type="text" value="Fullständigt namn")
+            label Ålder
+                input#age(type="text" value="7")
             label Bältesgrad
                 select#grade
-                    option(value="6") Vit
-                    option(value="5-1") Vitt med gult streck
-                    option(value="5") Gult
-                    option(value="4") Orange
-                    option(value="3") Grönt
-                    option(value="2") Blått
-                    option(value="1") Brunt
+                    option(value='6') Vitt bälte
+                    option(value='6-1') Vitt bälte med ett gult streckj
+                    option(value='5') Gult bälte
+                    option(value='5-1') Gult bälte med ett orange streck
+                    option(value='5-2') Gult bälte med två orange streck
+                    option(value='5-3') Gult bälte med tre orange streck
+                    option(value='4') Orange bälte
+                    option(value='4-1') Orange bälte med ett grönt streck
+                    option(value='4-2') Orange bälte med två gröna streck
+                    option(value='4-3') Orange bälte med tre gröna streck
+                    option(value='3') Grönt bälte
+                    option(value='3-1') Grönt bälte med ett blått streck
+                    option(value='3-2') Grönt bälte med två blå streck
+                    option(value='3-3') Grönt bälte med tre blå streck
+                    option(value='2') Blått bälte
+                    option(value='2-1') Blått bälte med ett brunt streck
+                    option(value='2-2') Blått bälte med två bruna streck
+                    option(value='2-3') Blått bälte med tre bruna streck
+                    option(value='1') Brunt bälte
+                    option(value='1 dan') Svart bälte I
+                    option(value='2 dan') Svart bälte II
+                    option(value='3 dan') Svart bälte III
+                    option(value='4 dan') Svart bälte IV
+                    option(value='5 dan') Svart bälte V
+                    option(value='6 dan') Svart bälte VI
+                    option(value='7 dan') Svart bälte VII
+
 
 
             label Närvaro
